--- a/styles.css
+++ b/styles.css
@@ -831,3 +831,36 @@ article {
 	}
 }
 
+@media (max-width: 375px) {
+	.col_6_with_spacer{
+	
+	padding: 10PX;
+	height: 50vh;
+	}
+	.right_strip {
+	width: 0px;
+	border: 0px;
+	}
+	.header {
+		width: 0px;
+	}
+	.main_content {
+	width: 100%;
+	}
+	.quotes_vh h4 {
+	font-size: 0.7em;
+	
+	}
+	.menu_border {
+	height: max(auto, 20%);
+	border: 1px solid;
+	border-radius: 30px;
+	text-align: center;
+	padding: 10px;
+	
+	margin: 10px;
+	font-size: 0.5em;
+	position: relative;
+	top: 0px;
+	}
+}
